# TurtleClass

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  HANDOFF.md  Makefile  PROJECT_MASTER.md  README.md
deploy/cloudflare/: deploy.sh  tunnel.yml
deploy/installer/: product.wxs
docs/00_Project/: OPEN_QUESTIONS.md
docs/01_Architecture/: SOFTWARE_ARCHITECTURE.md
docs/02_Phases/: PHASE_1_SERVER_CORE.md  PHASE_2_SERVER.md  PHASE_3_WINUI.md
docs/03_Testing/: TEST_STRATEGY.md
docs/04_Operations/: DEPLOYMENT_NOTES.md
docs/05_RFC/: README.md  RFC-001_HTTP_PROTOCOL.md  RFC-002_STORAGE_FORMAT.md  RFC-003_ADMIN_UI.md  RFC-004_DEVICE_CREDENTIALS.md  RFC-005_API_VERSIONING.md  RFC-006_CONFLICT_SNAPSHOT.md
docs/06_Templates/: RFC_TEMPLATE.md  TASK_TEMPLATE.md
include/TurtleClass/Core/: domain.hpp
include/TurtleClass/Security/: security.hpp
include/TurtleClass/Server/: accounts.hpp  http_server.hpp  server.hpp  snapshot.hpp
scripts/: daily_deepseek_audit.sh
src/cli/: sync_simulator.cpp
src/core/: domain.cpp
src/security/: security.cpp
src/server/: accounts.cpp  database.cpp  database.hpp  exception_report.cpp  exception_report.hpp  http_server.cpp  maintenance.cpp  maintenance.hpp  schema.sql  server.cpp  snapshot.cpp
src/storage/: storage.cpp  storage.hpp
src/windows/: BUILD_INSTRUCTIONS.md
src/windows/TurtleClassWinUI/TurtleClassWinUI/: TurtleClassWinUI.csproj
src/windows/TurtleClassWinUI/TurtleClassWinUI/Services/: AuthenticationService.cs  SyncService.cs
src/windows/win32_legacy/: README.md
src/windows/win32_legacy/TurtleClass.WindowsDesktop/: AuthenticationService.hpp  HttpClient.cpp  HttpClient.hpp  MainWindow.cpp  README.md  StudentListViewModel.cpp  SyncService.cpp
src/windows/win32_legacy/TurtleClassStorage/: Storage.cpp  Storage.hpp
src/windows/winui3_modern/: README.md
src/windows/winui3_modern/TurtleClassWinUI/: App.xaml.cs  MainWindow.xaml.cs  TurtleClassWinUI.csproj  app.manifest
src/windows/winui3_modern/TurtleClassWinUI/Pages/: LoginPage.xaml.cs  MainDashboardPage.xaml.cs
src/windows/winui3_modern/TurtleClassWinUI/Properties/: arm64.pubxml  x64.pubxml
src/windows/winui3_modern/TurtleClassWinUI/Services/: SyncService.cs
src/winui/TurtleClass.WinUI/: App.xaml  App.xaml.cpp  App.xaml.h  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  README.md  StudentListViewModel.cpp  StudentListViewModel.hpp  TurtleClass.WinUI.vcxproj  pch.h
src/winui/TurtleClass.WindowsDesktop/: AuthenticationService.cpp  AuthenticationService.hpp  MainWindow.cpp  MainWindow.hpp  README.md  StudentListViewModel.hpp  SyncService.hpp  TurtleClass.WindowsDesktop.vcxproj  main.cpp  resource.h
tests/: account_tests.cpp  core_tests.cpp  server_tests.cpp
